--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "author": "Avm07",
   "license": "MIT",
   "devDependencies": {
-    "node-fetch": "^3.0.0",
+    "@types/node-fetch": "^3.0.3",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "node-fetch": "^3.0.0"
   }
 }
