--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "js module to fetch data from the newcoin.pools smart contract",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
