--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "newcoin.pools-js",
   "version": "1.0.0",
   "description": "js module to fetch data from the newcoin.pools smart contract",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register test/**/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,19 @@
   "author": "Avm07",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^14.14.44",
     "@types/node-fetch": "^3.0.3",
-    "typescript": "^4.4.3"
+    "chai": "^4.3.4",
+    "mocha": "^8.4.0",
+    "ts-loader": "^9.1.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.10"
   },
   "dependencies": {
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^2.6.1"
   }
 }
