--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -7,7 +7,7 @@
       "sourceMap": false,
       "noImplicitAny": true,
       "moduleResolution": "node",
-      "declaration": false,
+      "declaration": true,
       "allowJs": true,
       "downlevelIteration": true,
       "esModuleInterop": true,
